--- a/README.rmd
+++ b/README.rmd
@@ -7,14 +7,14 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ### Model examples
-Some random set of model examples from different areas   
+A random set of model examples baset on system dynamics principals for different areas   
 `prediction_form_30092020.R` script includes two models:
 
 1. Forecast of reaching purpose level for production output 
 2. Infectious and Recovered quantity forecast during pandemic
 
 ### Примеры моделей
-Просто случайный набор моделей из разных областей   
+Примеры моделей, построенных на базе принципов системной динамики в различных областях   
 Скрипт `prediction_form_30092020.R` включает в себя две модели:
 
 1. Прогноз выхода объёмов производства на целевой уровень 
@@ -45,7 +45,8 @@ rename_indicators = c(confirmed_day = "Инфицированных", deaths_day
 covid_ru2 %>% 
   pivot_longer(matches("_day"), names_to = "type")  %>% 
   ggplot() +
-  geom_line(aes(x = date, y = value, group = type, col = type), size = 2) +
+  geom_line(aes(x = date, y = value, group = type, col = type), size = 2, alpha = 0.6) + 
+  geom_smooth(aes(x = date, y = value, group = type, col = type), size = 1, linetype = 5) +
   facet_grid(rows = vars(type), scale = "free", labeller = labeller(type = rename_indicators)) +
   scale_color_manual(values = unname(tableau), labels = rename_indicators) + 
   labs(title = "Динамика показтелий пандемии COVID-19 в России", x = "День", y = "Число наблюдений", col = "")
